[project]
name = "routeplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "ortools",
    "osmnx>=2.0.7",
    "pyproj>=3.7.1",
    "rtree>=1.4.1",
    "seaborn>=0.13.2",
    "sumolib>=1.25.0",
    "traci>=1.25.0",
]
